[package]
name = "pycom-wrap"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.159" , features = ["derive"] }
serde_json = "1.0.96"
toml = "*"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
unic-ucd-ident = "0.9.0"
unic-emoji-char = "0.9.0"
num-bigint = "*"
num-traits = "*"
